0.62.0
------
1. Reduce gradient code complexity - makes predefined gradients
   work in the same vein as custom gradients.
2. Add scrollbar groove/slider and 'sunken' appearance options.

0.61.4
------
1. Fix settings for sliderThumbs, handles, toolbarSeparators, and splitters.

0.61.3
------
1. Fix compilation with Qt4.5
2. Fix tab label shift under Qt4.5

0.61.2
------
1. Fix setting of options if no qtcurvestylerc is found!
2. Respect the "Raised" flag of toolbuttons - fixes missing border of
   disabled buttons in QJackCtl.
3. Fix text in Arora (Qt4.5) tabs.
4. Fix border of tabs.

0.61.1
------
1. Fix setting of default style. Fixes odd behaviour of config dialog!
2. Fix position of dark part of sunken lines.
3. Fix scrollbar groove when squared and using flat scrollbar buttons.
4. Fix kontact crash due to tracking mouse events on frames containing
   scrollviews.
5. Read in custom gradients and shades from any system config file.

0.61
----
 1. Only draw coloured border for moused-over items if they are enabled!
 2. Fix squred off corner in KTabWidgets when tabs are hidden.
 3. Fix corners of sunken Q3ScrollViews.
 4. Draw a sunken border around KPopupMenu titles.
 5. Draw toolbar arrows after icon, so that they do not get covered by
    the icon.
 6. Fix some weird alignment problems with KDE4 HIG.
 7. Fix default margin settings - these were too small.
 8. Add option to draw line after frameless groupbox title.
 9. Add option to use faded lines (toolbar separators, menutitem separators,
    etc.)
10. Support QLabel buddy widgets, as per KStyle.
11. Adjust focus margins on checks/radios that don't have text.
12. Fix misdrawn gradients in kwin's buttons of moveable maximised windows.
13. 'Fix' Konqueror's menubar height.
14. In config dialog, only enable 'colour seleected tab' checkbox if tab
    appearance is gradient or inverted.
15. Fix systemsettings crash with animated progressbars.
16. Fix animation of progressbars.